fixing css on firefox with twitter embeds

--- a/content/.xander/layout.scss
+++ b/content/.xander/layout.scss
@@ -104,6 +104,7 @@ nav.main-site{
             font-weight:lighter;
         }
         .content{
+            width:100%;
         }
         img{
             display:block;
